Make the ID server works

--- a/src/acidserver/appsettings.json
+++ b/src/acidserver/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=alvachiendb.database.windows.net;Initial Catalog=acidsrv;Persist Security Info = True;User ID=alvachien;Password=Azure20980030;"
   },
   "Logging": {
     "IncludeScopes": false,
