--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -1,6 +1,4 @@
 ﻿{
-  "userSecretsId": "aspnet-acidserver-96ab6900-ab69-4af8-8506-3c1a4c2913a0",
-
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.0-rc2-3002702",
@@ -27,7 +25,8 @@
       "type": "build"
     },
     "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.0.0-rc2-final",
-    "IdentityServer4": "1.0.0-beta2-update1",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0-rc2-final",
+    "IdentityServer4": "1.0.0-beta3",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc2-final",
