--- a/src/acidserver/appsettings.json
+++ b/src/acidserver/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=alvachiendb.database.windows.net;Initial Catalog=acidsrv;Persist Security Info = True;User ID=alvachien;Password=Azure20980030;"
+    "DefaultConnection": "Data Source=alvachiendb.database.windows.net;Initial Catalog=acidsrv;Persist Security Info = True;User ID=alvachien;Password=Azure20980030;",
+    "DebugConnection": "Server=QIANH-LAPTOP1;Database=AspNetCoreIdDB;Integrated Security=SSPI;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
