--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.0",
@@ -41,7 +41,8 @@
     "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
       "version": "1.0.0-preview2-final",
       "type": "build"
-    }
+    },
+    "BundlerMinifier.Core": "2.2.281"
   },
 
   "tools": {
