--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -25,8 +25,6 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
-    "IdentityServer4": "1.0.0-rc1-update2",
-    "IdentityServer4.AspNetIdentity": "1.0.0-rc1-update2",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
@@ -36,7 +34,9 @@
       "type": "platform"
     },
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-update1",
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-update1"
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-update1",
+    "IdentityServer4": "1.0.0-rc2",
+    "IdentityServer4.AspNetIdentity": "1.0.0-rc2"
   },
 
   "tools": {
