--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
     "IdentityServer4": "1.0.0-rc3",
     "IdentityServer4.AspNetIdentity": "1.0.0-rc3",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
@@ -24,15 +23,16 @@
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
-    "Microsoft.AspNetCore.Razor.Tools": "1.1.0-preview4-final"
+    "Microsoft.AspNetCore.Razor.Tools": "1.1.0-preview4-final",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.0"
   },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
-      "version": "1.0.0-preview2-final",
+      "version": "1.1.0-preview4-final",
       "imports": "portable-net45+win8+dnxcore50"
     },
-    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.0.0-preview3-final"
+    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final"
   },
 
   "frameworks": {
@@ -40,8 +40,9 @@
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.1.0-*"
+          "version": "1.1.0"
         }
+
       },
       "imports": "dnxcore50"
     }
