--- a/src/acidserver/package.json
+++ b/src/acidserver/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "bower": "^1.8.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.5.2",
     "gulp-cssmin": "^0.1.7",
