--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "IdentityServer4": "1.0.0-rc3",
-    "IdentityServer4.AspNetIdentity": "1.0.0-rc3",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
     "Microsoft.AspNetCore.Authentication.Google": "1.1.0",
     "Microsoft.AspNetCore.Authentication.MicrosoftAccount": "1.1.0",
@@ -24,7 +22,9 @@
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
     "Microsoft.AspNetCore.Razor.Tools": "1.1.0-preview4-final",
-    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.0"
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.0",
+    "IdentityServer4": "1.0.0",
+    "IdentityServer4.AspNetIdentity": "1.0.0"
   },
 
   "tools": {
