--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -24,21 +24,23 @@
     "Microsoft.Extensions.Configuration.UserSecrets": "1.1.1",
     "Microsoft.Extensions.Logging": "1.1.1",
     "Microsoft.Extensions.Logging.Console": "1.1.1",
-    "Microsoft.Extensions.Logging.Debug": "1.1.1",
-    "Microsoft.NETCore.App": "1.1.1"
+    "Microsoft.Extensions.Logging.Debug": "1.1.1"
   },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
       "version": "1.1.0-preview4-final",
       "imports": "portable-net45+win8+dnxcore50"
-    },
-    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final"
+    }
   },
 
   "frameworks": {
     "netcoreapp1.1": {
       "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.1.1"
+        }
       },
       "imports": "dnxcore50"
     }
