--- a/src/acidserver/project.json
+++ b/src/acidserver/project.json
@@ -2,29 +2,25 @@
   "dependencies": {
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
     "Microsoft.AspNetCore.Razor.Tools": "1.1.0-preview4-final",
-    "IdentityServer4.AspNetIdentity": "1.0.0",
-    "IdentityServer4": "1.3.1",
-    "Microsoft.AspNetCore.Authentication.Cookies": "1.1.1",
-    "Microsoft.AspNetCore.Authentication.Google": "1.1.1",
-    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.1",
-    "Microsoft.AspNetCore.Authentication.MicrosoftAccount": "1.1.1",
-    "Microsoft.AspNetCore.Authentication.OAuth": "1.1.1",
-    "Microsoft.AspNetCore.Diagnostics": "1.1.1",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.1",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.1",
-    "Microsoft.AspNetCore.Mvc": "1.1.2",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.1",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.1.1",
-    "Microsoft.AspNetCore.StaticFiles": "1.1.1",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1",
-    "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.1.1",
-    "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.1",
-    "Microsoft.Extensions.Configuration.Json": "1.1.1",
-    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.1",
-    "Microsoft.Extensions.Logging": "1.1.1",
-    "Microsoft.Extensions.Logging.Console": "1.1.1",
-    "Microsoft.Extensions.Logging.Debug": "1.1.1"
+    "Microsoft.AspNetCore.Authentication.MicrosoftAccount": "1.1.2",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.2",
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.2",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.2",
+    "Microsoft.AspNetCore.Mvc": "1.1.3",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.2",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.2",
+    "Microsoft.AspNetCore.StaticFiles": "1.1.2",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.2",
+    "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.2",
+    "Microsoft.Extensions.Configuration.Json": "1.1.2",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.2",
+    "Microsoft.Extensions.Logging": "1.1.2",
+    "Microsoft.Extensions.Logging.Console": "1.1.2",
+    "Microsoft.Extensions.Logging.Debug": "1.1.2",
+    "IdentityServer4": "1.5.2",
+    "IdentityServer4.AspNetIdentity": "1.0.1"
   },
 
   "tools": {
@@ -39,7 +35,7 @@
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.1.1"
+          "version": "1.1.2"
         }
       },
       "imports": "dnxcore50"
