Make aliyun server work

--- a/src/acidserver/acidserver.csproj
+++ b/src/acidserver/acidserver.csproj
@@ -40,6 +40,10 @@
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
   <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
     <Exec Command="npm install" />
     <Exec Command="bower install" />
