--- a/src/acidserver/acidserver.csproj
+++ b/src/acidserver/acidserver.csproj
@@ -6,6 +6,10 @@
     <StartupObject />
     <Authors>Alva Chien</Authors>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>RELEASE;NETCOREAPP2_0;USE_AZURE</DefineConstants>
+  </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.0.4" />
