--- a/src/acidserver/package.json
+++ b/src/acidserver/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "jquery": "^3.2.1",
+    "jquery-validation": "^1.14.0",
+    "jquery-validation-unobtrusive": "^3.2.6",
     "popper.js": "^1.12.2"
   },
   "devDependencies": {
