--- a/src/acidserver/Properties/launchSettings.json
+++ b/src/acidserver/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:41016/",
-      "sslPort": 0
+      "sslPort": 44397
     }
   },
   "profiles": {
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "use64Bit": true
     },
     "acidserver": {
       "commandName": "Project",
