--- a/src/acidserver/web.config
+++ b/src/acidserver/web.config
@@ -2,11 +2,10 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%"
-        arguments="%LAUNCHER_ARGS%"
-        stdoutLogEnabled="true"
-        stdoutLogFile=".\logs\stdout" />
+    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout">
+      <environmentVariables />
+    </aspNetCore>
   </system.webServer>
 </configuration>
