--- a/src/acidserver/acidserver.csproj
+++ b/src/acidserver/acidserver.csproj
@@ -1,39 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
     <Authors>Alva Chien</Authors>
     <Configurations>Debug;Release;AzureRelease;AliyunRelease</Configurations>
-    <Version>1.3.0</Version>
+    <Version>1.4.0</Version>
     <Company>Alva Chien</Company>
-    <Copyright>(C) Copyright by Alva Chien, 2016 - 2019</Copyright>
+    <Copyright>(C) Copyright by Alva Chien, 2016 - 2020</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>RELEASE;NETCOREAPP2_0</DefineConstants>
+    <DefineConstants>RELEASE;</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='AliyunRelease|AnyCPU'">
-    <DefineConstants>RELEASE;NETCOREAPP2_0;USE_ALIYUN;</DefineConstants>
+    <DefineConstants>RELEASE;USE_ALIYUN;</DefineConstants>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='AzureRelease|AnyCPU'">
-    <DefineConstants>RELEASE;NETCOREAPP2_0;USE_AZURE;USE_SSL</DefineConstants>
+    <DefineConstants>RELEASE;USE_AZURE;USE_SSL</DefineConstants>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NETCOREAPP2_0</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;</DefineConstants>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.5.3" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.5.3" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
  
 </Project> 
