--- a/src/acidserver/acidserver.csproj
+++ b/src/acidserver/acidserver.csproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;USE_SSL</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
