--- a/.gitignore
+++ b/.gitignore
@@ -260,7 +260,7 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
-/src/acidserver/appsettings.json
+appsettings.*.json
 
 # Publish folder
 PublishProfiles/
