Correct Launch setting

--- a/src/acidserver/Properties/launchSettings.json
+++ b/src/acidserver/Properties/launchSettings.json
@@ -13,7 +13,9 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "ancmHostingModel": "OutOfProcess",
+      "use64Bit": true
     },
     "acidserver": {
       "commandName": "Project",
