--- a/src/acidserver/appsettings.json
+++ b/src/acidserver/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=STUDYPC-202207\\SQLEXPRESS;Initial Catalog=acidsrv;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=acidsrv;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
